Date	Added
2007/01/31
	* Updated arrow_decrement setting to specify if skills should "auto-guess"
	  if they require ammo or not based on currently used weapon. By default
	  arrows are consumed and no skill-ammo-requirement guessing is done
	  (battle/battle.conf).
	* Added hom_rename setting to enable renaming your homunculus multiple
	  times (homun.conf).
2007/01/26
	* Updated the gvg damage adjustments. Non-skill ranged damage adjustment is
	  -20% instead of -25%, and Magic-skill adjustment is -40% instead of -50%
2007/01/22
	* New @commands (related to homunculus): hominfo, homstats, homtalk,
	  homlvup, homevolution, makehomun, homfriendly, homhungry, homshuffle
	* Added config settings related to homunculus: hom_setting,
	  homunculus_friendly_rate, hvan_explosion_intimate, homunculus_show_growth
	  (battle/homunc.txt)
	* enable_baseatk now includes homuncs [Skotlex]
2007/01/07
	* merged parts of trunk's config files [ultramage]
	- added missing config setting for @reset and desc for #reset
	- added new setting, guild_aura (controls when it works and whom it affects)
	- monster_class_change_full_recover and friend_auto_add set to yes (official)
	- improved the desc for attack_attr_none and pc_max_status_def
	- replaced two outdated message strings
2006/12/19
	* floor item lifetime is now an int instead of ushort, meaning the max
	  value is now 2kM ms instead of 65k ms (drops.conf). [Skotlex]
2006/12/20
	* Fixed the meaning of stdout_with_ansisequence and changed the default 
	  value to no. [FlavioJS]
2006/12/13
	* Merged setting stdout_with_ansisequence ([login/char/map]_athena.conf)
	  which can enable/disable console colors.
2006/11/29
	* Merged the updates to slaves_inherit_mode and slaves_inherit_speed so you
	  can decide under which types of masters does the slave's speed/mode is
	  changed (see battle/monster.conf). [Skotlex]
	* Merged mapflags from trunk [Playtester]
2006/11/22